--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 
 <body>
-    <header>
-        <h1>ToDo List</h1>
-    </header>
     <div class="container">
-        <div class="dataIn">
-            <input id="inputField" type="text" placeholder="Enter activity" />
-            <button id="addEntry">Add</button>
+        <header>
+            <h1>ToDo List</h1>
+        </header>
+        <div class="main">
+            <div class="dataIn">
+                <input id="inputField" type="text" placeholder="Enter activity" maxlength="50" />
+                <button id="addEntry">Add</button>
+            </div>
         </div>
     </div>
-
     <script src="main.js"></script>
 </body>
 
